--- a/WebsiteRoutes/WebsiteRoutes/WebsiteRoutes.csproj
+++ b/WebsiteRoutes/WebsiteRoutes/WebsiteRoutes.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="BigQueryQuery.cs" />
+    <Compile Include="App_Start\JsonContentNegotiator.cs" />
     <Compile Include="Controllers\ClubsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestController.cs" />
