--- a/WebsiteRoutes/WebsiteRoutes/packages.config
+++ b/WebsiteRoutes/WebsiteRoutes/packages.config
@@ -74,9 +74,9 @@
   <package id="Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.2" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Razor" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
@@ -120,7 +120,7 @@
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net461" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
@@ -128,7 +128,7 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
-  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
@@ -165,7 +165,7 @@
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
@@ -173,8 +173,8 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
