--- a/WebsiteRoutes/TestBigQuery/TestBigQuery.csproj
+++ b/WebsiteRoutes/TestBigQuery/TestBigQuery.csproj
@@ -119,6 +119,8 @@
     <Compile Include="BigQueryQuery.cs" />
     <Compile Include="Club.cs" />
     <Compile Include="ClubsService.cs" />
+    <Compile Include="Event.cs" />
+    <Compile Include="EventService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
