--- a/WebsiteRoutes/ApiReadRoutes/ApiReadRoutes.csproj
+++ b/WebsiteRoutes/ApiReadRoutes/ApiReadRoutes.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\ValuesController.cs" />
+    <Compile Remove="Services\Schedule.cs" />
   </ItemGroup>
 
   <ItemGroup>
