--- a/WebsiteRoutes/ApiReadRoutes/ApiReadRoutes.csproj
+++ b/WebsiteRoutes/ApiReadRoutes/ApiReadRoutes.csproj
@@ -19,11 +19,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Cloud.BigQuery.V2" Version="1.2.0" />
+    <PackageReference Include="Google.Api.Gax" Version="2.6.0" />
+    <PackageReference Include="Google.Api.Gax.Rest" Version="2.6.0" />
+    <PackageReference Include="Google.Cloud.BigQuery.V2" Version="1.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="SQLitePCLRaw.bundle_green" Version="1.1.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.2" />
   </ItemGroup>
 
 </Project>
